--- a/Main/IsolatedRazor/IsolatedRazor.nuspec
+++ b/Main/IsolatedRazor/IsolatedRazor.nuspec
@@ -4,7 +4,7 @@
 				<id>IsolatedRazor</id>
 				<version>1.0.5405.25953</version>
 				<title>IsolatedRazor</title>
-				<authors>Fink IT</authors>
+				<authors>Christoph Fink</authors>
 				<licenseUrl>https://isolatedrazor.codeplex.com/license</licenseUrl>
 				<projectUrl>https://isolatedrazor.codeplex.com/</projectUrl>
 				<requireLicenseAcceptance>false</requireLicenseAcceptance>
