- demo added - release 1.0.1.0

--- a/Main/packages/repositories.config
+++ b/Main/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\IsolatedRazor.Demo.Web\packages.config" />
+  <repository path="..\IsolatedRazor.Demo\packages.config" />
   <repository path="..\IsolatedRazor\packages.config" />
 </repositories>
