- ForbiddenTypes added - release V 1.1.0.0

--- a/Main/IsolatedRazor/packages.config
+++ b/Main/IsolatedRazor/packages.config
@@ -3,4 +3,5 @@
   <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.3" targetFramework="net451" developmentDependency="true" />
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
+  <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net451" />
 </packages>
